--- a/DynamicDataEFTestApp/Site.master
+++ b/DynamicDataEFTestApp/Site.master
@@ -20,7 +20,7 @@
         <%-- TODO: Enable partial rendering by setting the EnablePartialRendering attribute to "true" to provide a smoother browsing experience.
              Leaving partial rendering disabled will provide a better debugging experience while the application is in development. --%>
 
-        <asp:ScriptManager runat="server" EnablePartialRendering="false" />
+        <asp:ScriptManager runat="server" EnablePartialRendering="true" />
 
         
         <asp:ContentPlaceHolder id="ContentPlaceHolder1" runat="server">
